--- a/drowing lines and other things/Form1.resx
+++ b/drowing lines and other things/Form1.resx
@@ -153,6 +153,9 @@
   <data name="paper.Size" type="System.Drawing.Size, System.Drawing">
     <value>776, 348</value>
   </data>
+  <data name="paper.SizeMode" type="System.Windows.Forms.PictureBoxSizeMode, System.Windows.Forms">
+    <value>Zoom</value>
+  </data>
   <data name="paper.TabIndex" type="System.Int32, mscorlib">
     <value>1</value>
   </data>
